--- a/package.json
+++ b/package.json
@@ -12,25 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/common": "^2.4.7",
+    "@angular/compiler": "^2.4.7",
+    "@angular/compiler-cli": "^2.4.7",
+    "@angular/core": "^2.4.7",
+    "@angular/flex-layout": "^2.0.0-beta.5",
+    "@angular/forms": "^2.4.7",
+    "@angular/http": "^2.4.7",
+    "@angular/material": "^2.0.0-beta.1",
+    "@angular/platform-browser": "^2.4.7",
+    "@angular/platform-browser-dynamic": "^2.4.7",
+    "@angular/router": "^3.4.7",
     "angular2-materialize": "^5.1.4",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.97.7",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-beta.31",
+    "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "^2.2.30",
-    "angular-cli": "1.0.0-beta.15",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
